# syropod_remote

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  LICENSE  Readme.md  Readme.md~  hexapod_remote.kdev4  package.xml  package.xml~
.kdev4/: hexapod_remote.kdev4
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/hexapod_remote/cmake/: hexapod_remote-msg-paths.cmake
include/syropod_remote/: syropod_remote.h
launch/: Joystick.launch  hexapod_remote.launch  hexapod_remote.launch~  syropod_remote.launch
msg/: AndroidControl.msg~  AndroidJoy.msg  AndroidSensor.msg  AndroidSensor.msg~  Num.msg~  androidJoy.msg  androidSensor.msg
src/: hexapod_remote.cpp  hexapod_remote.cpp~  syropod_remote.cpp
